--- a/post-terkait.html
+++ b/post-terkait.html
@@ -17,21 +17,21 @@ iframe{border:0;}
 #fw-feed-items .fw-feed-item-image {
     margin: 0px;
     padding: 0;
-    width: 0 !important;
-    height: 0 !important;
+    width: 0 ;
+    height: 0 ;
     overflow: hidden;
     
 }
 #fw-feed-items .fw-feed-item-image-module {
     margin: 0 0 0 5px;
     padding: 0;
-    float: none !important;
-    text-align: -webkit-center !important;
+    float: none ;
+    text-align: -webkit-center ;
 }
 	
 </style>	
 <style type="text/css">
-    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {border: 0;font-family: inherit;font-size: 100%;font-style: inherit;font-weight: inherit;margin: 0;outline: 0;padding: 0;vertical-align: baseline;}
+    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {border: 0;font-family: inherit;font-size: 100%;font-style: inherit;font-weight: inherit;margin: 0;outline: 0;padding: 0;vertical-align: baseline;}
     html{
   font-size: 62.5%; 
   -webkit-text-size-adjust: 100%; 
@@ -46,11 +46,11 @@ iframe{border:0;}
     header .fw-feed-title a:link{color:#505659;}
     header .fw-feed-title a:hover{color:#505659;}
     header .fw-feed-title a:visited{color:#505659;}
-	#fw-feed-items-scroll-area{background-color:#ffffff; background-image:none; width: 1px; min-width: 100%; overflow:hidden;}
+	#fw-feed-items-scroll-area{background-color:#ffffff; background-image:none; width: 1px; min-width: 0; overflow:hidden;}
 
     #fw-feed-items{margin:0;padding:0; overflow:hidden;}
 	
-	#fw-feed-items .fw-feed-item{margin:0;padding:20px 0;clear:both;border-bottom: 1px dashed #CCCCCC;}
+	#fw-feed-items .fw-feed-item{margin:0;padding:20px 0;clear:both;border-bottom: 1px  #CCCCCC;}
     #fw-feed-items .fw-feed-item:hover{margin:0;padding:20px 0;clear:both;}
 	#fw-feed-items .fw-feed-item-url{display: block;overflow: hidden;}
     #fw-feed-items .fw-feed-item-url[onclick] { cursor: pointer;}
@@ -62,7 +62,7 @@ iframe{border:0;}
    	
    	#fw-feed-items .fw-feed-item-image-module{margin:0 0 0 5px; padding:0;float:none;}
 	
-	 #fw-feed-items .fw-feed-item-image{margin:0; padding:0;width:0;height:;overflow:hidden;}
+	 #fw-feed-items .fw-feed-item{margin:0; padding:0;width:0;height:;overflow:hidden;}
     #fw-feed-items .fw-feed-item-content-module{margin:0 0 0 5px;padding:0 0 0 5px;overflow:hidden; }
     #fw-feed-items .fw-feed-item-title{margin:0 2px 0 0;padding:0 2px 0 0;color:#004182;line-height:1.5;font-size:16px;overflow:hidden;display:block;}
     #fw-feed-items .fw-feed-item-description{margin:0 2px 0 0;padding:0 2px 0 0;color:#333333;word-wrap:break-word;line-height:1.5;font-size:12px;overflow: hidden;display: block;}
